Nova estrutruração do código

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,8 +1,6 @@
-/agua.png
-/apresentacao/
-/grama.png
-/logica/
-/maca.png
-/main/
-/passagem.png
-/personagem.png
+/old/
+/apresentacaoOLD/
+/logicaOLD/
+/mainOLD/
+/com/
+/arquiteturadefinida/
