Deisgn gráfico do jogo melhorado

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,6 +1,6 @@
-/old/
-/apresentacaoOLD/
-/logicaOLD/
-/mainOLD/
-/com/
+/2grama.png
+/2inimigo.png
+/inimigo.gif
 /arquiteturadefinida/
+/inimigo.png
+/passagem.png
