--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,6 +1,7 @@
-/2grama.png
-/2inimigo.png
-/inimigo.gif
+/agua.png
 /arquiteturadefinida/
+/grama.png
+/inimigo.gif
 /inimigo.png
+/maca.png
 /passagem.png
